--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-12" id="app">
+            <div class="col-8 offset-2 text-center" id="app">
                 <h1>{{messaggio}}</h1>
+                <img :src="'' + immagine" />
             </div>
         </div>
     </div>
